--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     .inr { background: #ff6600; color: white; }
     .usd { background: #00cc66; color: white; }
     .currency-btn:hover { opacity: 0.85; }
+
     /* Reviews */
     .reviews {
       background: #f4f4f4;
@@ -121,6 +122,25 @@
       margin-top: 10px;
       font-weight: bold;
       color: #0d47a1;
+    }
+
+    /* Telegram Button */
+    #telegramBtn {
+      display: none;
+      margin-top: 15px;
+      padding: 12px 25px;
+      background: #0088cc;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    #telegramBtn:hover {
+      transform: scale(1.05);
+      background: #0077b6;
     }
   </style>
 </head>
@@ -205,6 +225,8 @@
       <button class="currency-btn inr" onclick="payINR()">Pay in INR</button>
       <button class="currency-btn usd" onclick="payUSD()">Pay in USD</button>
       <button class="currency-btn" style="background:#ccc;color:#000;" onclick="closeModal()">Cancel</button>
+      <!-- Telegram Button -->
+      <button id="telegramBtn" onclick="window.location.href='https://t.me/drovexa'">Talk to Drovexra</button>
     </div>
   </div>
 
@@ -219,10 +241,17 @@
 
     function closeModal() {
       document.getElementById("paymentModal").style.display = "none";
+      document.getElementById("telegramBtn").style.display = "none"; // Reset for next time
     }
 
     function payINR() {
+      // open UPI
       window.location.href = "upi://pay?pa=7905315338@fam&pn=Drovexra&am=0&cu=INR";
+
+      // after 8 sec show telegram button
+      setTimeout(function() {
+        document.getElementById("telegramBtn").style.display = "block";
+      }, 8000);
     }
 
     function payUSD() {
