--- a/membership.html
+++ b/membership.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: linear-gradient(135deg, #3F9BDF, #FFFFFF);
+      background: linear-gradient(135deg, #000000, #D1D1D1);
       color: #222;
       line-height: 1.6;
     }
