--- a/membership.html
+++ b/membership.html
@@ -8,22 +8,29 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: linear-gradient(135deg, #000000, #D1D1D1);
+      background: linear-gradient(135deg, #000000, #E1E1E1);
       color: #222;
       line-height: 1.6;
     }
+
+    /* Gradient text */
+    h1, h2, p, .price, .reviews h2, .review {
+      background: linear-gradient(120deg, #000000, #FFFFFF);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
     header {
       text-align: center;
       padding: 40px 20px;
     }
     header h1 {
       font-size: 2.5rem;
-      color: #0d47a1;
     }
     header p {
       font-size: 1.2rem;
-      color: #333;
     }
+
     .plans {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -31,28 +38,28 @@
       padding: 40px;
     }
     .card {
-      background: rgba(255,255,255,0.9);
+      background: #FFFFFF;
       border-radius: 15px;
       padding: 25px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
       transition: transform 0.3s ease;
     }
     .card:hover {
       transform: translateY(-10px);
     }
-    .card h2 {
-      margin: 0 0 10px;
-    }
+
     .price {
       font-size: 1.4rem;
       font-weight: bold;
       margin-bottom: 15px;
-      color: #0d47a1;
     }
+
     ul {
       text-align: left;
       padding-left: 20px;
+      color: #111;
     }
+
     .btn {
       display: inline-block;
       margin-top: 15px;
@@ -62,13 +69,15 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      background: linear-gradient(90deg, #3F9BDF, #0d47a1);
-      color: white;
+      background: #000000;
+      color: #FFFFFF;
       transition: 0.3s;
     }
     .btn:hover {
       transform: scale(1.05);
+      background: #222;
     }
+
     /* Modal */
     .modal {
       display: none;
@@ -81,7 +90,7 @@
       align-items: center;
     }
     .modal-content {
-      background: white;
+      background: #FFFFFF;
       padding: 30px;
       border-radius: 12px;
       text-align: center;
@@ -89,6 +98,7 @@
     }
     .modal-content h3 {
       margin-bottom: 20px;
+      color: #000000;
     }
     .currency-btn {
       display: block;
@@ -102,15 +112,18 @@
       cursor: pointer;
       transition: 0.3s;
     }
-    .inr { background: #ff6600; color: white; }
-    .usd { background: #00cc66; color: white; }
-    .currency-btn:hover { opacity: 0.85; }
+    .inr { background: #000000; color: #FFFFFF; }
+    .usd { background: #444444; color: #FFFFFF; }
+    .currency-btn:hover { opacity: 0.9; }
 
     /* Reviews */
     .reviews {
-      background: #f4f4f4;
+      background: #FFFFFF;
       padding: 40px;
       text-align: center;
+      border-radius: 12px;
+      margin: 40px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
     }
     .review {
       max-width: 600px;
@@ -121,7 +134,9 @@
       display: block;
       margin-top: 10px;
       font-weight: bold;
-      color: #0d47a1;
+      background: linear-gradient(120deg, #000000, #FFFFFF);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     /* Telegram Button */
@@ -261,4 +276,4 @@
     }
   </script>
 </body>
-        </html>
+  </html>
