--- a/index.html
+++ b/index.html
@@ -4,183 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drovexra - Landing Page</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      color: #111;
-      background: linear-gradient(135deg, #69B4E3, #FFFBFB, #D2F1FF);
-    }
-
-    header {
-      text-align: center;
-      padding: 60px 20px;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 15px;
-      font-weight: 700;
-      color: #1e293b;
-    }
-
-    header p {
-      font-size: 1.3rem;
-      color: #334155;
-    }
-
-    .highlight {
-      font-size: 1.4rem;
-      margin: 30px auto;
-      text-align: center;
-      font-weight: 500;
-      color: #1f2937;
-      max-width: 900px;
-      background: rgba(255,255,255,0.8);
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
-    }
-
-    .btn-container {
-      text-align: center;
-      margin: 30px 0;
-    }
-
-    .btn {
-      background: #111;
-      color: #fff;
-      padding: 14px 28px;
-      border: none;
-      border-radius: 10px;
-      margin: 10px;
-      cursor: pointer;
-      font-size: 1rem;
-      font-weight: 600;
-      transition: all 0.3s;
-    }
-
-    .btn:hover {
-      background: #444;
-      transform: translateY(-2px);
-    }
-
-    .notification {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #fff;
-      padding: 12px 18px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      font-size: 0.95rem;
-      display: none;
-      animation: fadeInOut 6s ease-in-out forwards;
-      z-index: 1000;
-    }
-
-    @keyframes fadeInOut {
-      0% { opacity: 0; transform: translateY(-20px);}
-      10%, 90% { opacity: 1; transform: translateY(0);}
-      100% { opacity: 0; transform: translateY(-20px);}
-    }
-
-    .hero-img {
-      display: block;
-      margin: 40px auto;
-      max-width: 90%;
-      border-radius: 14px;
-      box-shadow: 0 8px 22px rgba(0,0,0,0.2);
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-      background: rgba(255,255,255,0.7);
-      font-size: 0.95rem;
-    }
-
-    /* Popup styles */
-    .popup {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.6);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      animation: fadeIn 0.3s;
-      z-index: 2000;
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
-
-    .popup-content {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      width: 300px;
-      animation: slideUp 0.4s;
-    }
-
-    @keyframes slideUp {
-      from {transform: translateY(50px); opacity: 0;}
-      to {transform: translateY(0); opacity: 1;}
-    }
-
-    .popup input {
-      width: 90%;
-      padding: 10px;
-      margin: 15px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    .popup button {
-      padding: 10px 20px;
-      background: #28a745;
-      border: none;
-      color: white;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .popup button:hover {
-      background: #218838;
-    }
-
-    /* About section */
-    .about {
-      background: rgba(255,255,255,0.85);
-      padding: 40px;
-      margin: 40px auto;
-      max-width: 900px;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    }
-
-    .about h2 {
-      margin-bottom: 20px;
-      font-size: 2rem;
-      color: #1e293b;
-    }
-
-    .about p, .about li {
-      font-size: 1.1rem;
-      color: #334155;
-      line-height: 1.6;
-      margin-bottom: 12px;
-    }
-
-  </style>
+  <!-- External CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
