--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       font-size: 3rem;
       margin-bottom: 15px;
       font-weight: 700;
-      color: #fff; /* button ke upar wala text pure white */
+      color: #fff; /* header text white */
     }
 
     header p {
@@ -171,18 +171,21 @@
 
     /* About section */
     .about {
-      background: linear-gradient(120deg, #FFFFFF, #000000);
+      background: #000; /* pure black */
       padding: 40px;
       margin: 40px auto;
       max-width: 900px;
       border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      color: #fff; /* text pure white */
     }
 
-    .about h2, .about p, .about li {
-      background: linear-gradient(120deg, #000000, #FFFFFF);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    .about h2 {
+      color: #fff;
+    }
+
+    .about p, .about li {
+      color: #fff;
     }
   </style>
 </head>
@@ -285,4 +288,4 @@
   </script>
 
 </body>
-</html>
+                                                          </html>
